dhall/tests/type-errors/unit/AssertTriviallyFalse.txt
Type error: error: AssertMismatch
 --> <current file>:1:0
  |
1 | assert : 1 === 2
  | ^^^^^^^^^^^^^^^^ AssertMismatch
  |
